[package]
name = "grit-junk-drawer"
description = "Collection of small utilities, types, traits, helpers, etc. "
version = "0.0.5"
edition = "2021"
authors = ["Gabriel Lee Anderson <gla.ander@gmail.com>"]
repository = "https://github.com/gabe-lee/grit-junk-drawer.git"
license = "BSD-3-Clause"
keywords = []
categories = ["rust-patterns"]

[dependencies]
